# BriskPlayer

./: CLV_ListView.c  CLV_ListView.h  CPI_CircleBuffer.c  CPI_CircleBuffer.h  CPI_Equaliser.h  CPI_Equaliser_Basic.c  CPI_ID3.h  CPI_ID3_Genres.c  CPI_Image.c  CPI_Image.h  CPI_Indicators.c  CPI_Indicators.h  CPI_Interface.c  CPI_Interface.h  CPI_InterfacePart.c  CPI_InterfacePart.h  CPI_InterfacePart_CommandButton.c  CPI_InterfacePart_Indicator.c  CPI_Keyboard.c  CPI_Keyboard.h  CPI_Player.c  CPI_Player.h  CPI_Player_Callbacks.c  CPI_Player_CoDec.h  CPI_Player_CoDec_FLAC.c  CPI_Player_CoDec_MPEG.c  CPI_Player_CoDec_OGG.c  CPI_Player_CoDec_WAV.c  CPI_Player_CoDec_WinAmpPlugin.c  CPI_Player_Engine.c  CPI_Player_Engine.h  CPI_Player_FileAssoc.c  CPI_Player_Messages.h  CPI_Player_Output.h  CPI_Player_Output_DirectSound.c  CPI_Player_Output_FAudio.c  CPI_Player_Output_File.c  CPI_Player_Output_Wave.c  CPI_Playlist.c  CPI_Playlist.h  (+42 more)
res/: Original Default.CPSkin  about.txt  changes.txt
